@@ -104,8 +104,14 @@ class CompileTest(TestBase, AssertsCompiledSQL):
         for field in 'year', 'month', 'day':
             self.assert_compile(
                 select([extract(field, t.c.col1)]),
-                "SELECT EXTRACT(%s FROM t.col1::timestamp) AS anon_1 "
+                "SELECT EXTRACT(%s FROM t.col1 :: timestamp) AS anon_1 "
                 "FROM t" % field)
+
+        for field in 'year', 'month', 'day':
+            self.assert_compile(
+                select([extract(field, func.timestamp() - datetime.timedelta(days =5))]),
+                "SELECT EXTRACT(%s FROM (timestamp() - %%(timestamp_1)s) :: timestamp) AS anon_1"
+                 % field)
 
 class FloatCoercionTest(TablesTest, AssertsExecutionResults):
     __only_on__ = 'postgresql'
@@ -937,6 +943,19 @@ class MiscTest(TestBase, AssertsExecutionResults, AssertsCompiledSQL):
             self.assert_((subject.c['id$']==referer.c.ref).compare(subject.join(referer).onclause))
         finally:
             meta1.drop_all()
+
+    def test_extract(self):
+        fivedaysago = datetime.datetime.now() - datetime.timedelta(days=5)
+        for field, exp in (
+                    ('year', fivedaysago.year),
+                    ('month', fivedaysago.month),
+                    ('day', fivedaysago.day),
+            ):
+            r = testing.db.execute(
+                select([extract(field, func.now() + datetime.timedelta(days =-5))])
+            ).scalar()
+            eq_(r, exp)
+
 
     def test_checksfor_sequence(self):
         meta1 = MetaData(testing.db)
